# fgdb_to_gpkg

./: .gitignore  Pipfile  README.md  SECURITY.md  eda.R  fgdb-to-gpkg.py  fgdb_to_gpkg.py  poetry.toml  pyproject.toml
.github/actions/setup-python-environment/: action.yml
.github/workflows/: gitleaks.yml  python-publish-pypi.yml  python-publish-test-pypi.yml  python-publish.yml  python-style.yml  python-tests.yml
.github/workflows/actions/: setup-python-environment.yml
fgdb_to_gpkg/: __init__.py  fgdb_to_gpkg.py
tests/: test_fgdb_to_gpkg.py
