[project]
name = "fgdb-to-gpkg"
version = "0.1.14"
description = "A lightweight Python package that converts Esri File GeoDataBases into OGC GeoPackages"
authors = [
    {name = "Philip Orlando", email = "phlp.orlando@gmail.com"},
    ]

[project.dependencies]
fiona = "1.9.2"
geopandas = "0.12.2"
[tool.poetry]
name = "fgdb-to-gpkg"
version = "0.1.14"
description = "A lightweight Python package that converts Esri File GeoDataBases into OGC GeoPackages"
authors = ["Philip Orlando <phlp.orlando@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.12.2"
shapely = "^2.0.1"
tqdm = "^4.65.0"
argparse = "^1.4.0"
fiona = "^1.9.2"
gdal = "3.6.3"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
