[project]
name = "fgdb-to-gpkg"
version = "0.3.2"
description = "A lightweight Python package that converts Esri File GeoDataBases into OGC GeoPackages"
authors = [
    { name = "Philip Orlando", email = "phlp.orlando@gmail.com" },
    { name = "Brandon Istenes", email = "bistenes@gmail.com" },
]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "fiona==1.10.b2",
    "geopandas==0.12.2",
]

[project.urls]
Repository = "https://github.com/philiporlando/fgdb_to_gpkg"
Issues = "https://github.com/philiporlando/fgdb_to_gpkg/issues"

[project.scripts]
fgdb-to-gpkg = "fgdb_to_gpkg:main"

[dependency-groups]
dev = [
    "pytest>=7.2.2,<8",
    "pytest-cov>=4.0.0,<5",
    "pytest-mock>=3.12.0,<4",
    "geodatasets>=2024.7.0,<2025",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
