[project]
name = "fgdb-to-gpkg"
version = "0.4.0"
description = "A lightweight Python package that converts Esri File GeoDataBases into OGC GeoPackages"
authors = [
    { name = "Philip Orlando", email = "phlp.orlando@gmail.com" },
    { name = "Brandon Istenes", email = "bistenes@gmail.com" },
]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "fiona>=1.10.1",
    "geodatasets>=2024.8.0",
    "geopandas==1.1.1",
    "pyogrio>=0.11.1",
    "pytest>=7.4.4",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/philiporlando/fgdb_to_gpkg"
Issues = "https://github.com/philiporlando/fgdb_to_gpkg/issues"

[project.scripts]
fgdb-to-gpkg = "fgdb_to_gpkg:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2,<8",
    "pytest-cov>=4.0.0,<5",
    "pytest-mock>=3.12.0,<4",
    "geodatasets>=2024.7.0,<2025",
    "pyogrio", 
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
